--- a/project.json
+++ b/project.json
@@ -202,9 +202,9 @@
         },
         {
             "name":     "dawn",
-            "version":  "v6303",
+            "version":  "m116",
             "url":      "https://dawn.googlesource.com/dawn",
-            "branch":   "chromium/6303",
+            "commit":   "d8439c0f5bfabd80b0e2cae443fc6b69067a9b2a",
             "install":  "prefix-install.py"
         },
         {
