get a 'compiled' yet not working mode (likely my issue with use of skgpu::graphite::Flush(sk_surface) and sk_dawn->submit()

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -55,6 +55,30 @@
             }
         },
         {
+            "name": "ux-test1",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/../hyperspace/build/ux-test1",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}/../hyperspace/build",
+            "environment": [],
+            "MIMode": "gdb",
+            "presentation": {
+                "hidden": false,
+                "group": "",
+                "order": 1,
+            },
+            "windows":{
+                "type": "cppvsdbg",
+                "program": "${workspaceFolder}/../hyperspace/build/Debug/webgpu-test",
+                "cwd": "${workspaceFolder}/../hyperspace/build"
+            },
+            "osx": {
+                "MIMode": "lldb"
+            }
+        },
+        {
             "name": "lambda",
             "type": "cppdbg",
             "request": "launch",
