--- a/project.json
+++ b/project.json
@@ -192,26 +192,22 @@
             "commit":   "ee78934"
         },
         {
-            "name": "abseil-cpp",
-            "version": "20240116.1",
-            "url": "https://github.com/abseil/abseil-cpp",
-            "commit": "2f9e432",
+            "name":     "dawn",
+            "version":  "m122",
+            "url":      "https://dawn.googlesource.com/dawn",
+            "commit":   "5b45794c2c24c3fa40dc480af92c5284a95423ef",
+            "recursive": false,
+            "prebuild": "prebuild.py",
+            "install":  "install.py",
             "cmake": {
                 "args": ["-DCMAKE_CXX_STANDARD=14"]
             }
         },
         {
-            "name":     "dawn",
-            "version":  "m116",
-            "url":      "https://dawn.googlesource.com/dawn",
-            "commit":   "d8439c0f5bfabd80b0e2cae443fc6b69067a9b2a",
-            "install":  "prefix-install.py"
-        },
-        {
             "name":     "skia",
-            "version":  "m116",
+            "version":  "m122",
             "url":      "https://skia.googlesource.com/skia.git",
-            "commit":   "bb40886d43b5fcbcdfb5587a2d20db418622990a"
+            "commit":   "c6835e2d5ff641dad9347ce4c2ff79dbc29cf9aa"
         },
         {
             "name":     "pthread-w32",
