--- a/project.json
+++ b/project.json
@@ -97,8 +97,9 @@
             "version":  "m122",
             "url":      "https://dawn.googlesource.com/dawn",
             "commit":   "5b45794c2c24c3fa40dc480af92c5284a95423ef",
-            "resource":  true,
-            "recursive": false
+            "resource":  false,
+            "recursive": false,
+            "prebuild": "prebuild.py"
         },
         {
             "name":     "harfbuzz",
