--- a/project.json
+++ b/project.json
@@ -28,14 +28,6 @@
             }
         },
         {
-            "name":     "grapheme",
-            "version":  "15.0",
-            "commit":   "c8b34aa04ac8702e55ba4b8946d6794c9c6056f5",
-            "url":      "https://git.suckless.org/libgrapheme",
-            "resource": true,
-            "platforms": []
-        },
-        {
             "name":     "icu",
             "version":  "74.2",
             "commit":   "2d02932",
@@ -114,7 +106,10 @@
             "name":     "freetype",
             "version":  "2.13.2",
             "url":      "https://github.com/freetype/freetype",
-            "commit":   "2a790a9f4937c3950028bd3de29e63c6b0d419ce"
+            "commit":   "2a790a9f4937c3950028bd3de29e63c6b0d419ce",
+            "cmake": {
+                "args": ["FT_DISABLE_BZIP2=On"]
+            }
         },
         {
             "name":     "libexpat",
@@ -131,39 +126,6 @@
             "url":      "https://skia.googlesource.com/skia.git",
             "commit":   "c6835e2d5ff641dad9347ce4c2ff79dbc29cf9aa",
             "resource":  true
-        },
-        {
-            "name":     "fmt",
-            "version":  "10.1.1",
-            "commit":   "f5e5435",
-            "url":      "https://github.com/fmtlib/fmt",
-            "platforms": ["win","lin"]
-        },
-        {
-            "name":     "tinygltf",
-            "version":  "2.8.15",
-            "commit":   "acf1e8a",
-            "url":      "https://github.com/syoyo/tinygltf",
-            "platforms": ["win","lin"]
-        },
-        {
-            "name":     "nvpro_core",
-            "version":  "1",
-            "commit":   "775b17ef7c7e270731e61d82c5f6e08be9caa64e",
-            "url":      "https://github.com/nvpro-samples/nvpro_core",
-            "resource": true,
-            "platforms": ["none"],
-            "script":    ["python3", "adjust-headers.py"]
-        },
-        {
-            "name":     "vk_video_samples",
-            "version":  "1",
-            "commit":   "b36f79c1756456ee5e8316c084a41f44e3c244b4",
-            "url":      "https://github.com/nvpro-samples/vk_video_samples",
-            "platforms": ["none"],
-            "cmake": {
-                "path":"vk_video_encoder"
-            }
         },
         {
             "name":     "oniguruma",
@@ -192,59 +154,6 @@
             }
         },
         {
-            "name":     "ogg",
-            "version":  "1.3.5",
-            "url":      "https://github.com/xiph/ogg",
-            "commit":   "e1774cd",
-            "notes":    "for webrtc",
-            "cmake": {
-                "args-win": ["-DCMAKE_C_FLAGS=/MT"]
-            }
-        },
-        {
-            "name":     "opus",
-            "version":  "1.4",
-            "url":      "https://github.com/xiph/opus",
-            "commit":   "82ac57d",
-            "cmake": {
-                "args": ["-DOPUS_DISABLE_INTRINSICS=1", "-DOPUS_BUILD_SHARED_LIBRARY=0"],
-                "path": "."
-            }
-        },
-        {
-            "name":     "opusfile",
-            "version":  "0.12",
-            "url":      "https://github.com/xiph/opusfile",
-            "commit":   "9d718345ce03b2fad5d7d28e0bcd1cc69ab2b166",
-            "cmake": {
-                "args": ["-DOP_DISABLE_HTTP=Yes","-DOP_DISABLE_DOCS=Yes","-DOP_DISABLE_EXAMPLES=Yes"],
-                "path": "."
-            }
-        },
-        {
-            "name":     "speexdsp",
-            "version":  "1.2.1",
-            "url":      "https://github.com/xiph/speexdsp",
-            "commit":   "1b28a0f"
-        },
-        {
-            "name":     "opusenc",
-            "version":  "0.21",
-            "url":      "https://github.com/xiph/libopusenc",
-            "commit":   "b19e1b14",
-            "cmake": {
-                "args": ["-DOP_DISABLE_HTTP=Yes","-DOP_DISABLE_DOCS=Yes"],
-                "path": "."
-            }
-        },
-        {
-            "name":     "FFmpeg",
-            "version":  "6.2",
-            "url":      "https://github.com/FFmpeg/FFmpeg",
-            "commit":   "44e9cccffa6eef7fee8662f9e9bd88e3b04b0724",
-            "platforms": ["none"]
-        },
-        {
             "name":     "kissfft",
             "version":  "131.1.0",
             "url":      "https://github.com/mborgerding/kissfft",
@@ -268,13 +177,6 @@
             "resource": true
         },
         {
-            "name":     "gpac",
-            "url":      "https://github.com/gpac/gpac",
-            "version":  "2.2.2",
-            "commit":   "b34e38516",
-            "platforms": ["none"]
-        },
-        {
             "name":     "mp4v2",
             "version":  "2.1.3",
             "url":      "https://github.com/enzo1982/mp4v2",
@@ -282,14 +184,6 @@
             "cmake": {
                 "args": ["-DBUILD_SHARED=No", "-DBUILD_UTILS=No"]
             }
-        },
-        {
-            "name":     "depot_tools",
-            "version":  "aug7-23",
-            "url":      "https://chromium.googlesource.com/chromium/tools/depot_tools.git",
-            "commit":   "02e70b435732a41d3d251f7c861110c6ee91f65b",
-            "resource": true,
-            "platforms": []
         },
         {
             "name":     "yuv2rgb",
