--- a/overlays/harfbuzz/CMakeLists.txt
+++ b/overlays/harfbuzz/CMakeLists.txt
@@ -3,11 +3,13 @@ project(harfbuzz)
 
 message(WARN "HarfBuzz has a Meson port and tries to migrate all the other build systems to it, please consider using it as we might remove our cmake port soon.")
 
-add_compile_options(
-  $<$<CONFIG:>:/MT>
-  $<$<CONFIG:Debug>:/MT>
-  $<$<CONFIG:Release>:/MT>
-)
+if(WIN32)
+  add_compile_options(
+    $<$<CONFIG:>:/MT>
+    $<$<CONFIG:Debug>:/MT>
+    $<$<CONFIG:Release>:/MT>
+  )
+endif()
 
 ## Limit framework build to Xcode generator
 if (BUILD_FRAMEWORK)
