--- a/project.json
+++ b/project.json
@@ -15,17 +15,14 @@
             "commit":   "07b8803",
             "url":      "https://github.com/glennrp/libpng",
             "cmake": {
-                "args": ["-DPNG_STATIC=On"]
+                "args": ["-DPNG_STATIC=%STATIC%"]
             }
         },
         {
             "name":     "brotli",
             "version":  "1.1.0",
             "commit":   "ed738e8",
-            "url":      "https://github.com/google/brotli",
-            "cmake": {
-                "args": ["-DBUILD_SHARED_LIBS=Off"]
-            }
+            "url":      "https://github.com/google/brotli"
         },
         {
             "name":     "icu",
@@ -97,6 +94,27 @@
             }
         },
         {
+            "name":     "OpenSubdiv",
+            "version":  "3.6.0",
+            "url":      "https://github.com/PixarAnimationStudios/OpenSubdiv",
+            "commit":   "7d0ab5530feef693ac0a920585b5c663b80773b3",
+            "cmake": {
+                "args": [
+                    "-DNO_TUTORIALS=1",
+                    "-DNO_EXAMPLES=1",
+                    "-DNO_REGRESSION=1",
+                    "-DNO_PTEX=1",
+                    "-DNO_DOC=1",
+                    "-DNO_OMP=1",
+                    "-DNO_TBB=1",
+                    "-DNO_CUDA=1",
+                    "-DNO_OPENGL=0",
+                    "-DNO_CLEW=1",
+                    "-DNO_OPENCL=1"
+                ]
+            }
+        },
+        {
             "name":     "harfbuzz",
             "version":  "8.3.0",
             "url":      "https://github.com/harfbuzz/harfbuzz",
@@ -121,7 +139,7 @@
             "commit":   "a590b2d",
             "cmake": {
                 "path": "expat",
-                "args": ["-DBUILD_SHARED_LIBS=Off", "-DEXPAT_MSVC_STATIC_CRT=On"]
+                "args": ["-DEXPAT_MSVC_STATIC_CRT=%STATIC%"]
             }
         },
         {
@@ -138,7 +156,7 @@
             "commit":   "08d3611",
             "resource": true,
             "cmake": {
-                "args": ["-DMSVC_STATIC_RUNTIME=1", "-DBUILD_SHARED_LIBS=0", "-DINSTALL_DOCUMENTATION=0"]
+                "args": ["-DMSVC_STATIC_RUNTIME=%STATIC%", "-DINSTALL_DOCUMENTATION=0"]
             }
         },
         {
@@ -152,16 +170,7 @@
             "name":     "fdk-aac",
             "version":  "v2.0.2",
             "url":      "https://github.com/mstorsjo/fdk-aac",
-            "commit":   "8264e376ea6f2fdaa3813ff1a8463e368d95083c",
-            "cmake": {
-                "args": ["-DBUILD_SHARED_LIBS=No"]
-            }
-        },
-        {
-            "name":     "speexdsp",
-            "version":  "1.2.1",
-            "url":      "https://github.com/xiph/speexdsp",
-            "commit":   "1b28a0f"
+            "commit":   "8264e376ea6f2fdaa3813ff1a8463e368d95083c"
         },
         {
             "name":     "kissfft",
@@ -169,8 +178,14 @@
             "url":      "https://github.com/mborgerding/kissfft",
             "commit":   "8f47a67",
             "cmake": {
-                "args": ["-DKISSFFT_STATIC=1", "-DKISSFFT_TEST=0", "-DKISSFFT_TOOLS=0"]
+                "args": ["-DKISSFFT_TEST=0", "-DKISSFFT_TOOLS=0"]
             }
+        },
+        {
+            "name":     "speexdsp",
+            "version":  "1.2.1",
+            "url":      "https://github.com/xiph/speexdsp",
+            "commit":   "1b28a0f"
         },
         {
             "name":     "minih264",
@@ -192,7 +207,7 @@
             "url":      "https://github.com/enzo1982/mp4v2",
             "commit":   "86b5aaf",
             "cmake": {
-                "args": ["-DBUILD_SHARED=No", "-DBUILD_UTILS=No"]
+                "args": ["-DBUILD_UTILS=No"]
             }
         },
         {
@@ -214,7 +229,7 @@
             "commit":   "1873d3b",
             "url":      "https://github.com/Mbed-TLS/mbedtls",
             "cmake": {
-                "args": ["-DENABLE_TESTING=0", "-DMSVC_STATIC_RUNTIME=1", "-DLINK_WITH_PTHREAD=1"]
+                "args": ["-DENABLE_TESTING=0", "-DMSVC_STATIC_RUNTIME=%STATIC%", "-DLINK_WITH_PTHREAD=1"]
             }
         },
         {
@@ -266,7 +281,7 @@
             "commit":   "2d8393924b9f3e014000c7420c7da7c3ddb74e2c",
             "url":      "https://gitlab.com/bzip2/bzip2",
             "cmake":    {
-                "args": ["-DENABLE_STATIC_LIB=Yes"]
+                "args": ["-DENABLE_STATIC_LIB=%STATIC%"]
             }
         }
     ]
