compilation fixes for clang (how did this work before material); pch compilation is 15s on Clang compared to 40s on GCC. fix Vulkan headers by using Dawn's specifically checked out ones (we should check these out)

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -58,10 +58,10 @@
             "name": "canvas-test",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/../hyperspace/build/canvas-test",
+            "program": "${workspaceFolder}/../hyperspace/build-clang/canvas-test",
             "args": [],
             "stopAtEntry": false,
-            "cwd": "${workspaceFolder}/../hyperspace/build",
+            "cwd": "${workspaceFolder}/../hyperspace/build-clang",
             "environment": [
                 {
                     "name": "ASAN_OPTIONS",
